--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@koa/cors": "^2.2.2",
     "cheerio": "^1.0.0-rc.2",
     "esm": "^3.0.84",
     "koa": "^2.6.1",
