--- a/api/.eslintrc.json
+++ b/api/.eslintrc.json
@@ -17,5 +17,13 @@
   "parserOptions": {
     "ecmaVersion": 2017,
     "sourceType": "module"
-  }
+  },
+  "overrides": [
+    {
+      "files": ["test/*"],
+      "env": {
+        "mocha": true
+      }
+    }
+  ]
 }
