--- a/api/package.json
+++ b/api/package.json
@@ -23,9 +23,11 @@
   "devDependencies": {
     "@types/koa": "^2.0.46",
     "@types/node-fetch": "^2.1.2",
+    "chai": "^4.2.0",
     "eslint": "^5.8.0",
     "eslint-config-prettier": "^3.1.0",
     "eslint-plugin-prettier": "^3.0.0",
+    "mocha": "^5.2.0",
     "prettier": "1.15.1",
     "typescript-eslint-parser": "^20.1.1"
   }
