--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha -r esm -u tdd --colors",
     "build": "tsc .",
     "lint": "eslint .",
     "start": "node index.js"
